[package]
name = "slintrust"
version = "0.1.0"
edition = "2024"
authors = ["Joseph Christopher <joechristophersc@gmail.com>"]
description = "An async Rust ORM that auto-generates tables and CRUD from structs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joechristophers/slintrust"
keywords = ["orm", "rust", "async", "sqlx"]
categories = ["database"]

[dependencies]
sqlx = { version = "0.8.6", features = ["any", "sqlite", "postgres", "mysql", "runtime-tokio-native-tls", "macros", "uuid"] }
tokio = { version = "1.48", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
slint_derive = "0.1.0"

